Add Hudi MOR snapshot query and metadata table support
Read log files using filegroup reader and fix tests

Add test table and a test with metadata enabled

Fix SqlDate type not able to cast to Number error