@@ -32,11 +32,13 @@ import io.trino.parquet.reader.ParquetReader;
 import io.trino.parquet.reader.RowGroupInfo;
 import io.trino.plugin.base.metrics.FileFormatDataSourceStats;
 import io.trino.plugin.hive.HiveColumnHandle;
-import io.trino.plugin.hive.HivePartitionKey;
-import io.trino.plugin.hive.TransformConnectorPageSource;
 import io.trino.plugin.hive.parquet.ParquetReaderConfig;
+import io.trino.plugin.hudi.file.HudiBaseFile;
+import io.trino.plugin.hudi.reader.TrinoHudiReaderContext;
+import io.trino.plugin.hudi.storage.TrinoHudiStorage;
+import io.trino.plugin.hudi.storage.TrinoStorageConfiguration;
+import io.trino.plugin.hudi.util.SynthesizedColumnHandler;
 import io.trino.spi.TrinoException;
-import io.trino.spi.block.Block;
 import io.trino.spi.connector.ColumnHandle;
 import io.trino.spi.connector.ConnectorPageSource;
 import io.trino.spi.connector.ConnectorPageSourceProvider;
@@ -45,43 +47,33 @@ import io.trino.spi.connector.ConnectorSplit;
 import io.trino.spi.connector.ConnectorTableHandle;
 import io.trino.spi.connector.ConnectorTransactionHandle;
 import io.trino.spi.connector.DynamicFilter;
+import io.trino.spi.connector.EmptyPageSource;
 import io.trino.spi.predicate.TupleDomain;
-import io.trino.spi.type.Decimals;
-import io.trino.spi.type.TypeSignature;
-import org.apache.hudi.common.model.HoodieFileFormat;
+import org.apache.avro.Schema;
+import org.apache.avro.generic.IndexedRecord;
+import org.apache.hudi.common.table.HoodieTableMetaClient;
+import org.apache.hudi.common.table.TableSchemaResolver;
+import org.apache.hudi.common.table.read.HoodieFileGroupReader;
+import org.apache.hudi.common.util.Option;
+import org.apache.hudi.storage.StoragePath;
 import org.apache.parquet.column.ColumnDescriptor;
 import org.apache.parquet.io.MessageColumnIO;
 import org.apache.parquet.schema.MessageType;
 import org.joda.time.DateTimeZone;
 
 import java.io.IOException;
-import java.sql.Timestamp;
-import java.time.LocalDate;
-import java.time.ZoneOffset;
-import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalLong;
 import java.util.TimeZone;
+import java.util.stream.Collectors;
 
-import static com.google.common.base.Preconditions.checkArgument;
-import static io.airlift.slice.Slices.utf8Slice;
 import static io.trino.memory.context.AggregatedMemoryContext.newSimpleAggregatedMemoryContext;
-import static io.trino.metastore.Partitions.makePartName;
 import static io.trino.parquet.ParquetTypeUtils.getColumnIO;
 import static io.trino.parquet.ParquetTypeUtils.getDescriptors;
 import static io.trino.parquet.predicate.PredicateUtils.buildPredicate;
 import static io.trino.parquet.predicate.PredicateUtils.getFilteredRowGroups;
-import static io.trino.plugin.hive.HiveColumnHandle.FILE_MODIFIED_TIME_COLUMN_NAME;
-import static io.trino.plugin.hive.HiveColumnHandle.FILE_MODIFIED_TIME_TYPE_SIGNATURE;
-import static io.trino.plugin.hive.HiveColumnHandle.FILE_SIZE_COLUMN_NAME;
-import static io.trino.plugin.hive.HiveColumnHandle.FILE_SIZE_TYPE_SIGNATURE;
-import static io.trino.plugin.hive.HiveColumnHandle.PARTITION_COLUMN_NAME;
-import static io.trino.plugin.hive.HiveColumnHandle.PARTITION_TYPE_SIGNATURE;
-import static io.trino.plugin.hive.HiveColumnHandle.PATH_COLUMN_NAME;
-import static io.trino.plugin.hive.HiveColumnHandle.PATH_TYPE;
 import static io.trino.plugin.hive.parquet.ParquetPageSourceFactory.ParquetReaderProvider;
 import static io.trino.plugin.hive.parquet.ParquetPageSourceFactory.createDataSource;
 import static io.trino.plugin.hive.parquet.ParquetPageSourceFactory.createParquetPageSource;
@@ -90,37 +82,16 @@ import static io.trino.plugin.hive.parquet.ParquetPageSourceFactory.getParquetTu
 import static io.trino.plugin.hudi.HudiErrorCode.HUDI_BAD_DATA;
 import static io.trino.plugin.hudi.HudiErrorCode.HUDI_CANNOT_OPEN_SPLIT;
 import static io.trino.plugin.hudi.HudiErrorCode.HUDI_CURSOR_ERROR;
-import static io.trino.plugin.hudi.HudiErrorCode.HUDI_INVALID_PARTITION_VALUE;
-import static io.trino.plugin.hudi.HudiErrorCode.HUDI_UNSUPPORTED_FILE_FORMAT;
 import static io.trino.plugin.hudi.HudiSessionProperties.getParquetSmallFileThreshold;
 import static io.trino.plugin.hudi.HudiSessionProperties.isParquetVectorizedDecodingEnabled;
 import static io.trino.plugin.hudi.HudiSessionProperties.shouldUseParquetColumnNames;
-import static io.trino.plugin.hudi.HudiUtil.getHudiFileFormat;
-import static io.trino.spi.predicate.Utils.nativeValueToBlock;
-import static io.trino.spi.type.DateTimeEncoding.packDateTimeWithZone;
-import static io.trino.spi.type.StandardTypes.BIGINT;
-import static io.trino.spi.type.StandardTypes.BOOLEAN;
-import static io.trino.spi.type.StandardTypes.DATE;
-import static io.trino.spi.type.StandardTypes.DECIMAL;
-import static io.trino.spi.type.StandardTypes.DOUBLE;
-import static io.trino.spi.type.StandardTypes.INTEGER;
-import static io.trino.spi.type.StandardTypes.REAL;
-import static io.trino.spi.type.StandardTypes.SMALLINT;
-import static io.trino.spi.type.StandardTypes.TIMESTAMP;
-import static io.trino.spi.type.StandardTypes.TINYINT;
-import static io.trino.spi.type.StandardTypes.VARBINARY;
-import static io.trino.spi.type.StandardTypes.VARCHAR;
-import static io.trino.spi.type.TimeZoneKey.UTC_KEY;
-import static java.lang.Double.parseDouble;
-import static java.lang.Float.floatToRawIntBits;
-import static java.lang.Float.parseFloat;
-import static java.lang.Long.parseLong;
+import static io.trino.plugin.hudi.HudiUtil.buildTableMetaClient;
+import static io.trino.plugin.hudi.HudiUtil.constructSchema;
+import static io.trino.plugin.hudi.HudiUtil.convertToFileSlice;
+import static io.trino.plugin.hudi.HudiUtil.prependHudiMetaColumns;
 import static java.lang.String.format;
-import static java.util.Objects.isNull;
 import static java.util.Objects.requireNonNull;
-import static java.util.stream.Collectors.toList;
-import static java.util.stream.Collectors.toMap;
-import static org.apache.hudi.common.model.HoodieFileFormat.PARQUET;
+import static org.apache.hudi.common.model.HoodieTableType.COPY_ON_WRITE;
 
 public class HudiPageSourceProvider
         implements ConnectorPageSourceProvider
@@ -152,28 +123,61 @@ public class HudiPageSourceProvider
             List<ColumnHandle> columns,
             DynamicFilter dynamicFilter)
     {
-        HudiSplit split = (HudiSplit) connectorSplit;
-        String path = split.location();
-        HoodieFileFormat hudiFileFormat = getHudiFileFormat(path);
-        if (PARQUET != hudiFileFormat) {
-            throw new TrinoException(HUDI_UNSUPPORTED_FILE_FORMAT, format("File format %s not supported", hudiFileFormat));
+        HudiTableHandle hudiTableHandle = (HudiTableHandle) connectorTable;
+        HudiSplit hudiSplit = (HudiSplit) connectorSplit;
+        Optional<HudiBaseFile> hudiBaseFileOpt = hudiSplit.baseFile();
+
+        String dataFilePath = hudiBaseFileOpt.isPresent()
+                ? hudiBaseFileOpt.get().getPath()
+                : hudiSplit.logFiles().getFirst().getPath();
+        // Filter out metadata table splits
+        if (dataFilePath.contains(new StoragePath(
+                ((HudiTableHandle) connectorTable).getBasePath()).toUri().getPath() + "/.hoodie/metadata")) {
+            return new EmptyPageSource();
+        }
+        // Handle MERGE_ON_READ tables to be read in read_optimized mode
+        // IMPORTANT: These tables will have a COPY_ON_WRITE table type due to how `HudiTableTypeUtils#fromInputFormat`
+        if (hudiTableHandle.getTableType().equals(COPY_ON_WRITE) && !hudiSplit.logFiles().isEmpty()) {
+            if (hudiBaseFileOpt.isEmpty()) {
+                // Handle hasLogFiles=true, hasBaseFile = false
+                // Ignoring log files without base files, no data required to be read
+                return new EmptyPageSource();
+            }
         }
 
+        long start = 0;
+        long length = 10;
+        if (hudiBaseFileOpt.isPresent()) {
+            start = hudiBaseFileOpt.get().getStart();
+            length = hudiBaseFileOpt.get().getLength();
+        }
+        HoodieTableMetaClient metaClient = buildTableMetaClient(fileSystemFactory.create(session), hudiTableHandle.getBasePath());
+        String latestCommitTime = metaClient.getCommitsTimeline().lastInstant().get().requestedTime();
+        Schema dataSchema;
+        try {
+            dataSchema = new TableSchemaResolver(metaClient).getTableAvroSchema(latestCommitTime);
+        }
+        catch (Exception e) {
+            throw new RuntimeException(e);
+        }
         List<HiveColumnHandle> hiveColumns = columns.stream()
                 .map(HiveColumnHandle.class::cast)
-                .collect(toList());
-        // just send regular columns to create parquet page source
-        // for partition columns, separate blocks will be created
+                .toList();
+
         List<HiveColumnHandle> regularColumns = hiveColumns.stream()
                 .filter(columnHandle -> !columnHandle.isPartitionKey() && !columnHandle.isHidden())
-                .collect(toList());
+                .collect(Collectors.toList());
+        List<HiveColumnHandle> columnHandles = prependHudiMetaColumns(regularColumns);
+
+        Schema requestedSchema = constructSchema(columnHandles.stream().map(HiveColumnHandle::getName).toList(),
+                columnHandles.stream().map(HiveColumnHandle::getHiveType).toList(), false);
+
         TrinoFileSystem fileSystem = fileSystemFactory.create(session);
-        TrinoInputFile inputFile = fileSystem.newInputFile(Location.of(path), split.fileSize());
-        ConnectorPageSource pageSource = createPageSource(
+        ConnectorPageSource dataPageSource = createPageSource(
                 session,
-                regularColumns,
-                split,
-                inputFile,
+                columnHandles,
+                hudiSplit,
+                fileSystem.newInputFile(Location.of(hudiBaseFileOpt.get().getPath()), hudiBaseFileOpt.get().getFileSize()),
                 dataSourceStats,
                 ParquetReaderOptions.builder(options)
                         .withSmallFileThreshold(getParquetSmallFileThreshold(session))
@@ -181,34 +185,34 @@ public class HudiPageSourceProvider
                         .build(),
                 timeZone);
 
-        Map<String, Block> partitionBlocks = convertPartitionValues(hiveColumns, split.partitionKeys());
+        SynthesizedColumnHandler synthesizedColumnHandler = SynthesizedColumnHandler.create(hudiSplit);
 
-        TransformConnectorPageSource.Builder transforms = TransformConnectorPageSource.builder();
-        int delegateIndex = 0;
-        for (HiveColumnHandle column : hiveColumns) {
-            if (partitionBlocks.containsKey(column.getName())) {
-                transforms.constantValue(partitionBlocks.get(column.getName()));
-            }
-            else if (column.getName().equals(PARTITION_COLUMN_NAME)) {
-                transforms.constantValue(nativeValueToBlock(PARTITION_TYPE_SIGNATURE, utf8Slice(toPartitionName(split.partitionKeys()))));
-            }
-            else if (column.getName().equals(PATH_COLUMN_NAME)) {
-                transforms.constantValue(nativeValueToBlock(PATH_TYPE, utf8Slice(path)));
-            }
-            else if (column.getName().equals(FILE_SIZE_COLUMN_NAME)) {
-                transforms.constantValue(nativeValueToBlock(FILE_SIZE_TYPE_SIGNATURE, split.fileSize()));
-            }
-            else if (column.getName().equals(FILE_MODIFIED_TIME_COLUMN_NAME)) {
-                long packedTimestamp = packDateTimeWithZone(split.fileModifiedTime(), UTC_KEY);
-                transforms.constantValue(nativeValueToBlock(FILE_MODIFIED_TIME_TYPE_SIGNATURE, packedTimestamp));
-            }
-            else {
-                transforms.column(delegateIndex);
-                delegateIndex++;
-            }
-        }
+        TrinoHudiReaderContext readerContext = new TrinoHudiReaderContext(
+                dataPageSource,
+                columnHandles,
+                synthesizedColumnHandler);
 
-        return transforms.build(pageSource);
+        HoodieFileGroupReader<IndexedRecord> fileGroupReader =
+                new HoodieFileGroupReader<>(
+                        readerContext,
+                        new TrinoHudiStorage(fileSystemFactory.create(session), new TrinoStorageConfiguration()),
+                        hudiTableHandle.getBasePath(),
+                        latestCommitTime,
+                        convertToFileSlice(hudiSplit, hudiTableHandle.getBasePath()),
+                        dataSchema,
+                        requestedSchema,
+                        Option.empty(),
+                        metaClient,
+                        metaClient.getTableConfig().getProps(),
+                        start,
+                        length,
+                        false);
+
+        return new HudiPageSource(
+                dataPageSource,
+                fileGroupReader,
+                hiveColumns,
+                synthesizedColumnHandler);
     }
 
     private static ConnectorPageSource createPageSource(
@@ -222,12 +226,13 @@ public class HudiPageSourceProvider
     {
         ParquetDataSource dataSource = null;
         boolean useColumnNames = shouldUseParquetColumnNames(session);
-        String path = hudiSplit.location();
-        long start = hudiSplit.start();
-        long length = hudiSplit.length();
+        HudiBaseFile baseFile = hudiSplit.baseFile().get();
+        String path = baseFile.getPath();
+        long start = baseFile.getStart();
+        long length = baseFile.getLength();
         try {
             AggregatedMemoryContext memoryContext = newSimpleAggregatedMemoryContext();
-            dataSource = createDataSource(inputFile, OptionalLong.of(hudiSplit.fileSize()), options, memoryContext, dataSourceStats);
+            dataSource = createDataSource(inputFile, OptionalLong.of(baseFile.getFileSize()), options, memoryContext, dataSourceStats);
             ParquetMetadata parquetMetadata = MetadataReader.readFooter(dataSource, Optional.empty());
             FileMetadata fileMetaData = parquetMetadata.getFileMetaData();
             MessageType fileSchema = fileMetaData.getSchema();
@@ -300,70 +305,5 @@ public class HudiPageSourceProvider
             return new TrinoException(HUDI_BAD_DATA, exception);
         }
         return new TrinoException(HUDI_CURSOR_ERROR, format("Failed to read Parquet file: %s", dataSourceId), exception);
-    }
-
-    private static Map<String, Block> convertPartitionValues(
-            List<HiveColumnHandle> allColumns,
-            List<HivePartitionKey> partitionKeys)
-    {
-        return allColumns.stream()
-                .filter(HiveColumnHandle::isPartitionKey)
-                .collect(toMap(
-                        HiveColumnHandle::getName,
-                        columnHandle -> nativeValueToBlock(
-                                columnHandle.getType(),
-                                partitionToNativeValue(
-                                        columnHandle.getName(),
-                                        partitionKeys,
-                                        columnHandle.getType().getTypeSignature()).orElse(null))));
-    }
-
-    private static Optional<Object> partitionToNativeValue(
-            String partitionColumnName,
-            List<HivePartitionKey> partitionKeys,
-            TypeSignature partitionDataType)
-    {
-        HivePartitionKey partitionKey = partitionKeys.stream().filter(key -> key.name().equalsIgnoreCase(partitionColumnName)).findFirst().orElse(null);
-        if (isNull(partitionKey)) {
-            return Optional.empty();
-        }
-
-        String partitionValue = partitionKey.value();
-        String baseType = partitionDataType.getBase();
-        try {
-            return switch (baseType) {
-                case TINYINT, SMALLINT, INTEGER, BIGINT -> Optional.of(parseLong(partitionValue));
-                case REAL -> Optional.of((long) floatToRawIntBits(parseFloat(partitionValue)));
-                case DOUBLE -> Optional.of(parseDouble(partitionValue));
-                case VARCHAR, VARBINARY -> Optional.of(utf8Slice(partitionValue));
-                case DATE -> Optional.of(LocalDate.parse(partitionValue, DateTimeFormatter.ISO_LOCAL_DATE).toEpochDay());
-                case TIMESTAMP -> Optional.of(Timestamp.valueOf(partitionValue).toLocalDateTime().toEpochSecond(ZoneOffset.UTC) * 1_000);
-                case BOOLEAN -> {
-                    checkArgument(partitionValue.equalsIgnoreCase("true") || partitionValue.equalsIgnoreCase("false"));
-                    yield Optional.of(Boolean.valueOf(partitionValue));
-                }
-                case DECIMAL -> Optional.of(Decimals.parse(partitionValue).getObject());
-                default -> throw new TrinoException(
-                        HUDI_INVALID_PARTITION_VALUE,
-                        format("Unsupported data type '%s' for partition column %s", partitionDataType, partitionColumnName));
-            };
-        }
-        catch (IllegalArgumentException | DateTimeParseException e) {
-            throw new TrinoException(
-                    HUDI_INVALID_PARTITION_VALUE,
-                    format("Can not parse partition value '%s' of type '%s' for partition column '%s'", partitionValue, partitionDataType, partitionColumnName),
-                    e);
-        }
-    }
-
-    private static String toPartitionName(List<HivePartitionKey> partitions)
-    {
-        ImmutableList.Builder<String> partitionNames = ImmutableList.builderWithExpectedSize(partitions.size());
-        ImmutableList.Builder<String> partitionValues = ImmutableList.builderWithExpectedSize(partitions.size());
-        for (HivePartitionKey partition : partitions) {
-            partitionNames.add(partition.name());
-            partitionValues.add(partition.value());
-        }
-        return makePartName(partitionNames.build(), partitionValues.build());
     }
 }
